[package]
name = "grm"
version = "0.1.0"
edition = "2021"
description = "Small command-line tool to find local Git repositories and report that status of them."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
csv = "1.1"
clap = { version = "3.2.6", features = ["derive"] }
